--- a/Prefabs/Vehicles/Tracked/BMP1/Configs/CargoCompartment_BMP1.conf
+++ b/Prefabs/Vehicles/Tracked/BMP1/Configs/CargoCompartment_BMP1.conf
@@ -9,41 +9,16 @@ CargoCompartmentSlot : "{9BD4548866DA1807}Prefabs/Vehicles/Core/Configs/CargoCom
    ParentContextList {
     "rear_hatch"
    }
+   m_bInteriorOnly 0
+   m_bExteriorOnly 1
+  }
+  SCR_RemoveCasualtyUserAction "{61089D5E00C44348}" {
+   m_bInteriorOnly 1
+   m_bExteriorOnly 0
   }
  }
  SeatType 3
  DoorInfoList {
-  CompartmentDoorInfo "{50B8D5DD7BC767A1}" {
-   ContextName "RearDoorR"
-   EntryPositionInfo PointInfo "{50B8D5DD78963937}" {
-    Offset 0.5 0 -4
-   }
-   ExitPositionInfo PointInfo "{5E58712EC1A93885}" {
-    Offset 0.5 0.7 -2
-    Angles 0 180 0
-   }
-   SeatPositionAligning 0
-  }
-  CompartmentDoorInfo "{5E6013E5A47D353F}" {
-   ContextName "RearDoorL"
-   EntryPositionInfo PointInfo "{5E6013E5AE0D6272}" {
-    Offset -0.5 0 -4
-   }
-   ExitPositionInfo PointInfo "{5E6013E5AD38A5B0}" {
-    Offset -0.5 0.7 -2
-    Angles 0 180 0
-   }
-   SeatPositionAligning 0
-  }
- }
- AccessibilitySettings CompartmentAccessibilityContext "{5E58712EC1A93883}" {
-  BBHalfExtents 0.5 0.4 0.005
-  TraceOffset 0 0.5 1
-  ExcludePhysicsLayer 262144
- }
- BaseCoverage 1
- m_bIsWaterTight 1
- m_DefaultOccupantData SCR_DefaultOccupantData "{5E58712EC1A93882}" {
-  m_sDefaultOccupantPrefab "{DCB41B3746FDD1BE}Prefabs/Characters/Factions/OPFOR/USSR_Army/Character_USSR_Rifleman.et"
+  1
  }
 }
