--- a/Prefabs/Vehicles/Tracked/BMP1/Configs/CargoCompartment_BMP1.conf
+++ b/Prefabs/Vehicles/Tracked/BMP1/Configs/CargoCompartment_BMP1.conf
@@ -21,4 +21,6 @@ CargoCompartmentSlot : "{9BD4548866DA1807}Prefabs/Vehicles/Core/Configs/CargoCom
  DoorInfoList {
   1
  }
+ UIInfo UIInfo "{50870A10CE897250}" {
+ }
 }
